packages/app/styles/streamdown.css
[data-streamdown] {
	h1 {
		@apply text-xl;
	}

	h2 {
		@apply text-lg;
	}

	h3 {
		@apply text-base;
	}

	h4 {
		@apply text-sm;
	}

	h5 {
		@apply text-xsm;
	}

	h6 {
		@apply text-xs;
	}

	ul,
	ol {
		@apply pl-1;

		li {
			ul,
			ol {
				@apply pl-5;
			}
		}

		input[type='checkbox'] {
			translate: 0 2px;
			margin-right: 1px;
		}

		::marker {
			@apply text-std-300;
		}
	}

	div[data-streamdown='code-block'] {
		@apply bg-secondary gap-1 border-none pt-1;
	}

	div[data-streamdown='table-wrapper'] {
		@apply bg-secondary border-none;

		& > :first-child {
			button {
				@apply text-std-400;
			}

			svg {
				width: 12px;
				height: 12px;
			}
		}
	}

	div[data-streamdown='code-block-header'] {
		@apply h-6;

		& > :first-child {
			text-transform: capitalize;
			margin-bottom: -2px;

			&:empty::before {
				content: 'Raw';
			}
		}

		& + div {
			@apply -mt-7 h-6;
		}
	}

	div[data-streamdown='code-block-actions'] {
		@apply border-none bg-transparent;

		button {
			@apply text-std-400;
		}

		svg {
			width: 12px;
			height: 12px;
		}
	}
}

code[data-streamdown='inline-code'] {
	@apply box-decoration-clone px-1 py-[0.08rem] break-all;
}

